2008-10-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse) src/graphics.c (check_for_variable_color):
	New colorspec:   'lc variable'
	Read linestyle index from data column, look up corresponding color.
	(2D plots only; Version 4.2 handling of variable color in 3D is messy).

2008-10-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Explicitly set default color of first
	histogram to linestyle/linetype 0.
	Bug #2155287

2008-10-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/pgnuplot.c: Document option "-e".

2008-10-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c (drawgraph):  Work around a Windows clipboard bug by
	using ExtCreatePen() only for linewidth != 1.  The clipboard loses the
	line color if created with ExtCreatePen(), but not CreatePenIndirect().
	[sfeam] Is the clipboard problem still present for thicker lines?

2008-10-08  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/plot.c (main):
	Add a command line option -e to execute specified commands:
	E.g.:     gnuplot   file1.in   -e "reset"   file2.in

2008-10-06  Juergen Wieferink <wieferink@freenet.de>

	* src/set.c (set_palette_defined): Allow string variables and
	expressions in "set palette defined". SF #2149065

2008-10-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store_label): Only store color value for each label
	in a "with labels" plot if "rgb variable" has been requested.
	Bugfix

2008-09-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.h: Add field c into structure gpdPoint.

	* src/pm3d.c (pm3d_plot): Support "pm3d interpolate" for surfaces
	given by both z and colour coordinates.
	SF Bug #2127845

2008-09-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_label load_tic_users prune_dataticks)
	src/internal.c (f_strftime):  Fix memory leaks found by valgrind.
	Memcheck now gives all.dem a clean bill of health.

2008-09-23  Ethan Merritt  <merritt@u.washington.edu>
